EKS-with-LoadBalancer-Controller/eks-Ingress-SSL-SSLRedirect/kube-manifests-Ingress-SSL/ALB-Ingress-ContextPath-Based-Routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-ssl-demo
  annotations:
        # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: ingress-ssl-demo
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:466649784722:certificate/672a1ea4-7f42-4be5-90e9-1b12481b2115
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'      
    # External DNS - For creating a Record Set in Route53 ----------------------must install external dns
    external-dns.alpha.kubernetes.io/hostname: dnstest901.skywaytechsolutions.com, dnstest902.skywaytechsolutions.com
spec:
  ingressClassName: my-aws-ingress-class   # Ingress Class 
  defaultBackend:
    service:
      name: app3-nginx-nodeport-service
      ports:
       - number: 80
  rules:
    - http:
       paths:
        - path: /app1
          pathType:  Prefix
          backend: 
            service: 
              name: app1-nginx-nodeport-service
              ports:
                - number: 80
        - path:  /app2
          pathType:   Prefix
          backend:
            service:
              name: app2-nginx-nodeport-service
              ports:
               - number: 80
